--- a/Golf_CA2_API_Client/Golf_CA2_API_Client.csproj
+++ b/Golf_CA2_API_Client/Golf_CA2_API_Client.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Competition.cs" />
+    <Compile Include="Models\Course.cs" />
     <Compile Include="Models\GolfClub.cs" />
     <Compile Include="Models\Golfer.cs" />
     <Compile Include="Program.cs" />
